# sensenova-claw

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  config.yaml  config_example.yml  llm_reasnong.md  mytest.sh  package-lock.json  package.json  pyproject.toml  sandbox-down.sh  sandbox-up.sh
.agentos/: token
.agentos/agents/: AGENTS.md
.github/workflows/: update-latest-tag.yml
.sensenova-claw/agents/: AGENTS.md  USER.md
agentos/app/: main.py
agentos/utils/: ppt_html_screenshot.py
backend/: TUI_TEST_GUIDE.md  clean_empty_sessions.py  cli_client.py  init_db.py  minimal_tui.py  pyproject.toml  run_tui.py  simple_tui.py  tui.py
backend/app/: main.py
backend/cli/: app.py  commands.py  display.py
backend/tests/: test_arg_substitutor.py  test_cli_client.py  test_config_loader.py  test_cron_delivery.py  test_cron_models.py  test_cron_repository.py  test_cron_scheduler.py  test_dual_bus.py  test_feishu_outbound.py  test_feishu_send.py  test_gateway.py  test_gemini_provider_thought_signature.py  test_heartbeat_protocol.py  (+13 more)
docs/: 01_architecture.md  02_event_system.md  03_core_modules.md  04_database.md  05_websocket_protocol.md  06_frontend_architecture.md  07_configuration.md  08_development_guide.md  09_deployment.md  1.PRD.md  10_technical_decisions.md  11_gateway.md  12_builtin_tools.md  13_skills_system.md  14_dual_bus_architecture.md  15_event_standardization.md  16_tool_system_enhancement.md  17_system_prompt_workspace_session.md  18_memory_system.md  19_plugin_feishu_channel.md  2.architecture.md  20_cron_heartbeat_system.md  21_feishu_outbound_enhancement.md  22_multi_agent_and_workflow.md  23_skills_marketplace_and_visualization.md  24_path_security_policy.md  25_cli_enhancement.md  26_thorough_test_plan.md  27_tidy_and_next.md  28_orchestration_ui_and_tools.md  3.slides_generate.md  README.md  _sidebar.md  index.html
docs_raw/: architecture.md  code_todolist.md  update_v0.2.md  update_v0.3.md  update_v0.4.md  update_v0.5.md  update_v0.6.md  update_v0.7.md  update_v0.8.md  update_v0.9.md  update_v1.0.md  update_v1.1.md  update_v1.2.md  update_v1.3.md  update_v1.4.md  update_v1.5.md  update_v1.6.md
frontend/: package-lock.json  package.json
install/: README.md  install.ps1  install.sh
scripts/: auto_update.sh  capture_ppt_html_screenshots.py  dev.bat  dev.sh  feishu_send.py  migrate.py  openai_codex_oauth.mjs  postinstall.mjs  postinstall.sh  postinstall.test.mjs  ppt_deck_audit.py  tui_interactive.py  tui_test.py
test/: conftest.py  generate_matrix.py  run_all.ps1  run_all.sh
tests/: conftest.py
tmp_docs/: working_directory_analysis.md
updates/: 20260310_1730_tool_system_enhancement.md  20260310_2035_bus_dedup_and_e2e_script.md  20260310_2230_gemini_provider_thought_signature.md  20260310_2330_windows_bash_tool_fix.md  20260311_0010_feishu_skills_config.md
var/: .gitignore
(+1448 files in other folders)
